refactor(service): refactor LocationService to use optional and audit logs