@@ -1,6 +1,8 @@
 package com.nick.job_application_tracker.service;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -12,47 +14,46 @@ import com.nick.job_application_tracker.repository.LocationRepository;
 @Service
 public class LocationService {
 
-    private final LocationRepository repo;
-    private final LocationMapper mapper;
+    private final LocationRepository locationRepository;
     private final AuditLogService auditLogService;
 
-    public LocationService(LocationRepository repo, LocationMapper mapper, AuditLogService auditLogService) {
-        this.repo = repo;
-        this.mapper = mapper;
+    public LocationService(LocationRepository locationRepository, AuditLogService auditLogService) {
+        this.locationRepository = locationRepository;
         this.auditLogService = auditLogService;
     }
 
-    public List<LocationDTO> findAll() {
-        return repo.findAll().stream()
-            .map(mapper::toDTO)
-            .toList();
+    public List<LocationDTO> getAllLocations() {
+        return locationRepository.findAll().stream()
+                .map(LocationMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
-    public LocationDTO createLocation(LocationDTO dto) {
-        Location location = mapper.toEntity(dto);
-        Location saved = repo.save(location);
-
-        auditLogService.logCreate("Created location: " + saved.getCity() + ", " + saved.getCountry());
-        return mapper.toDTO(saved);
+    public Optional<LocationDTO> getLocationById(Long id) {
+        return locationRepository.findById(id).map(LocationMapper::toDTO);
     }
 
-    public LocationDTO updateLocation(Long id, LocationDTO dto) {
-        Location existing = repo.findById(id)
-            .orElseThrow(() -> new IllegalArgumentException("Location not found with id: " + id));
+    public LocationDTO createLocation(LocationDTO locationDTO) {
+        Location location = LocationMapper.toEntity(locationDTO);
+        Location savedLocation = locationRepository.save(location);
+        
+        auditLogService.logCreate("Created Location with ID " + savedLocation.getId() + " and city '" + savedLocation.getCity() + "'");
+        
+        return LocationMapper.toDTO(savedLocation);
+    }
 
-        existing.setCity(dto.getCity());
-        existing.setCountry(dto.getCountry());
-        Location updated = repo.save(existing);
-
-        auditLogService.logUpdate("Updated location ID: " + id);
-        return mapper.toDTO(updated);
+    public Optional<LocationDTO> updateLocation(Long id, LocationDTO locationDTO) {
+        return locationRepository.findById(id).map(existing -> {
+            LocationMapper.updateEntity(existing, locationDTO);
+            Location updatedLocation = locationRepository.save(existing);
+            
+            auditLogService.logUpdate("Updated Location with ID " + updatedLocation.getId() + " to city '" + updatedLocation.getCity() + "'");
+            
+            return LocationMapper.toDTO(updatedLocation);
+        });
     }
 
     public void deleteLocation(Long id) {
-        Location existing = repo.findById(id)
-            .orElseThrow(() -> new IllegalArgumentException("Location not found with id: " + id));
-
-        repo.delete(existing);
-        auditLogService.logDelete("Deleted location ID: " + id);
+        locationRepository.deleteById(id);
+        auditLogService.logDelete("Deleted Location with ID " + id);
     }
 }
